--- a/.env
+++ b/.env
@@ -3,6 +3,9 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=root
-DB_DATABASE=e-course
+DB_NAME=e-course
 DB_SYNCHRONIZE=true
+
 PORT=4000
+EXPIRESIN=60s
+SECRETKEY=SECRETKEY
